--- a/quiz/true/index.html
+++ b/quiz/true/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+  <html>
+    <head>
 
+      <meta charset="utf-8">
+			<link rel='stylesheet' href='style.css'/>
+			<script src='script.js'></script>
+
+    </head>
+    <body>
+
+      <h1 font-family="sant-serf">Looks like you need an aerial photo!</h1>
+      <h8 font-family="sant-serif">The quiz result says you need an aerial photo done, for different reasons.<br/>The choice is yours, but if you want me to come over, you can <a href="mailto:ira@amundsonaerialphotography.com">email me</a><h8>
+        
+        <br/>
+        <br/>
+        <a href="/">Go Home</a>
+
+    </body>
+  </html>
