--- a/quiz/true/index.html
+++ b/quiz/true/index.html
@@ -3,6 +3,7 @@
     <head>
 
       <meta charset="utf-8">
+	    <title>You need an aerial photo!</title>
 			<link rel='stylesheet' href='style.css'/>
 			<script src='script.js'></script>
 
