--- a/quiz/true/index.html
+++ b/quiz/true/index.html
@@ -10,8 +10,8 @@
     </head>
     <body>
 
-      <h1 font-family="sant-serf">Looks like you need an aerial photo!</h1>
-      <h8 font-family="sant-serif">The quiz result says you need an aerial photo done, for different reasons.<br/>The choice is yours, but if you want me to come over, you can <a href="mailto:ira@amundsonaerialphotography.com">email me</a><h8>
+      <h1>Looks like you need an aerial photo!</h1>
+      <h8>The quiz result says you need an aerial photo done, for different reasons.<br/>The choice is yours, but if you want me to come over, you can <a href="mailto:ira@amundsonaerialphotography.com">email me</a><h8>
         
         <br/>
         <br/>
