--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="shortcut icon" href="MyLogo.ico"/>
       <script src='script.js'></script>
     </head>
-    <body onload="modalBox()">
+    <body>
 	    
 
 <!-- The Modal -->
