--- a/quiz/false/index.html
+++ b/quiz/false/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
 
-      <h1 font-family="sant-serif">I guess it looks like you are all caught up!</h1>
-      <h8 font-family="sant-serif">But thanks for taking the quiz!<h8>
+      <h1 font-family="sans-serif">I guess it looks like you are all caught up!</h1>
+      <p font-family="sans-serif">But thanks for taking the quiz!<p>
         
         <br/>
         <br/>
