--- a/quiz/true/index.html
+++ b/quiz/true/index.html
@@ -8,10 +8,10 @@
 			<script src='script.js'></script>
 
     </head>
-    <body id="body">
+    <body>
 
       <h1>Looks like you need an aerial photo!</h1>
-      <h8>The quiz result says you need an aerial photo done, for different reasons.<br/>The choice is yours, but if you want me to come over, you can <a href="mailto:ira@amundsonaerialphotography.com">email me</a></h8>
+      <p>The quiz result says you need an aerial photo done, for different reasons.<br/>The choice is yours, but if you to, you can <a href="mailto:ira@amundsonaerialphotography.com">email me</a></p>
         
         <br/>
         <br/>
