--- a/quiz/true/index.html
+++ b/quiz/true/index.html
@@ -11,7 +11,7 @@
     <body>
 
       <h1>Looks like you need an aerial photo!</h1>
-      <p>The quiz result says you need an aerial photo done, for different reasons.<br/>The choice is yours, but if you to, you can <a href="mailto:ira@amundsonaerialphotography.com">email me</a></p>
+      <p>The quiz result says you need an aerial photo done, for different reasons.<br/>The choice is yours, but if you would like an aerial photo <a href="http://amundsonaerialphotography.com/Services/">or other,</a> you can book an apointment with me on my <a href="https://www.facebook.com/Amundson-Aerial-Photography-AAP-881108668736951/">facebook page</a>, or <a href="mailto:ira@amundsonaerialphotography.com">email me!</a></p>
         
         <br/>
         <br/>
