--- a/quiz/false/index.html
+++ b/quiz/false/index.html
@@ -3,6 +3,7 @@
     <head>
 
       <meta charset="utf-8">
+	    <title>AAP | You are all caught up!
 			<link rel='stylesheet' href='style.css'/>
 			<script src='script.js'></script>
 
