--- a/quiz/false/index.html
+++ b/quiz/false/index.html
@@ -3,7 +3,8 @@
     <head>
 
       <meta charset="utf-8">
-	    <title>AAP | You are all caught up!
+	    <title>AAP | You are all caught up!</title>
+	    <link rel="shortcut icon" href="checkmark-16 (1).ico"/>
 			<link rel='stylesheet' href='style.css'/>
 			<script src='script.js'></script>
 
