--- a/quiz/true/index.html
+++ b/quiz/true/index.html
@@ -4,6 +4,8 @@
 
       <meta charset="utf-8">
 	    <title>You need an aerial photo!</title>
+	    <link rel="shortcut icon" href="favicon (2).ico"/>
+
 			<link rel='stylesheet' href='style.css'/>
 			<script src='script.js'></script>
 
