--- a/quiz/index.html
+++ b/quiz/index.html
@@ -4,6 +4,8 @@
 
       <meta charset="utf-8">
 	    <title>AAP | Do you need an aerial photo?</title>
+	    <link rel="shortcut icon" href="favicon (4).ico"/>
+
 			<link rel='stylesheet' href='style.css'/>
 			<script src='script.js'></script>
 
