--- a/quiz/finish/index.html
+++ b/quiz/finish/index.html
@@ -13,7 +13,7 @@
     <body>
 
 <div id="old">
-  <h4>Please enter the approximate date (year) of your earliest aerial photo</h4>
+  <h4>Please enter the approximate date (year) of your latest aerial photo</h4>
       <input type="number" id="picDate" name="date" placeholder="date" min="1858" max="2018"></input>
 </div>
 <br/>
