--- a/quiz/true/index.html
+++ b/quiz/true/index.html
@@ -26,6 +26,7 @@
   js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.1';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+	    <div class="fb-like" data-href="https://www.facebook.com/iraamundsonaerialphotography/" data-width="100" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
 	    <br/>
 	    
 	    <br/><br/>
