--- a/quiz/true/index.html
+++ b/quiz/true/index.html
@@ -18,16 +18,7 @@
         <br/>
         <br/>
 	    
-	    <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.1';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-	    <div class="fb-like" data-href="https://www.facebook.com/iraamundsonaerialphotography/" data-width="100" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
-	    <br/>
+	    <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Firaamundsonaerialphotography%2F&width=100&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId" width="100" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 	    
 	    <br/><br/>
 	    <br/>
