--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	    <br/>
 	    <br/>
 	  
-	  <a href="blue.jpg.zip"> download>Download!</a>
+	  <a href="blue.jpg.zip" download></a>
 	  
 	    <br/>
 	    <br/>
