--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	    <br/>
 	    <br/>
 	  
-	  <a class="downl" href="blue.jpg" download>Download!</a>
+	  <a href="blue.jpg" download><button class="downl" >Download!</button></a>
 	  
 	    <br/>
 	    <br/>
