--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <script src='script.js'></script>
 	    <style>
 	    
-		   downl {
+		   .downl {
 			   background-color: green;
 			   color: white;
 			   height: 30px;
@@ -17,7 +17,7 @@
 			   border-radius: 15px;
 			   transition: .3s;
 		    }
-		    downl:hover {
+		    .downl:hover {
 			    background-color: #00D64A;
 		    }
 		    
