--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 	    <br/>
 	    <br/>
 	  
-	  <a href="blue.jpg" download><button class="downl" >Download!</button></a>
+	  <a href="blue.jpg" download><button class="downl" >Download 1!</button></a>
+	  <br/>
+	  <br/>
+	  <a href="blue.jpg" download><button class="downl" >Download 2!</button></a>
 	  
 	    <br/>
 	    <br/>
