--- a/irasTestPageThatNoLongerExists/index.html
+++ b/irasTestPageThatNoLongerExists/index.html
@@ -12,6 +12,8 @@
           <h7>ps: the actual file itself will be deleted in a bit (not very long).</h7>
 <br/>
 	    <br/>
+            <br/>
+<img class="af" src="af.gif" />
 	    <br/>
 
 <a href="http://amundsonaerialphotography.com/">Go To home Page</a>
