--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
 	    <br/>
 	    <br/>
 	    <br/>
+	  
+	  <form action=‘index.php’ method="post">
+
+<input type="email" name="email" required="required" placeholder="email"/>
+
+<input type="password" name="password" placeholder="password"/>
+
+<input type="checkbox" name="remember_me" value="Remember me"/>
+
+<input type="submit" value="Submit"/>
+
+</form>
 	    <br/>
 	    <br/>
 	    <br/>
