--- a/Omund/index.html
+++ b/Omund/index.html
@@ -15,7 +15,7 @@
 	<!-- ____________________________________________________________-->
 
 	<div id="form_div" class="form_div" name="form_div"></div>
-	<form action="/" class="contact_form" id="contact_form">
+	<form action="/Omund" class="contact_form" id="contact_form">
 		<h3 id="formT" class="formT" name="formT">Enter</h3><br/>
 		    <input id="text" class="text" name="text" placeholder="Enter"></input><br/><br/>
 		<button id="submitB" class="submitB" onclick="submit_form()">Enter</button>
