--- a/thanks/index.html
+++ b/thanks/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+  <html>
+    <head>
+	    <title>Thank you!</title>
+	    
+      <link rel='stylesheet' href='style.css'/>
+      <link rel="shortcut icon" href="MyLogo.ico"/>
 
+<?php
+
+$addr = "a value";
+
+function getUserIpAddr(){
+    if(!empty($_SERVER['HTTP_CLIENT_IP'])){
+        //ip from share internet
+        $ip = $_SERVER['HTTP_CLIENT_IP'];
+    }elseif(!empty($_SERVER['HTTP_X_FORWARDED_FOR'])){
+        //ip pass from proxy
+        $ip = $_SERVER['HTTP_X_FORWARDED_FOR'];
+    }else{
+        $ip = $_SERVER['REMOTE_ADDR'];
+    }
+    return $ip;
+}
+
+echo 'User Real IP - '.getUserIpAddr();
+
+?>
+
+      <script src='script.js'>
+var addr = “<
+
+
+
+</script>
+	    <style></style>
+    </head>
+    <body>
+	    
+
+<h1 text-align=“center” font-size=“30px” font-family=“sans-serif”>Thank you!</h1>
+
+    </body>
+  </html>
