--- a/thanks/index.html
+++ b/thanks/index.html
@@ -28,7 +28,7 @@ echo 'User Real IP - '.getUserIpAddr();
 ?>
 
       <script src='script.js'>
-var addr = “<?php $ip ?>
+var addr = “<?php $ip ?>";
 alert(addr);
 
 
