--- a/Omund/index.html
+++ b/Omund/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-    <title>Omund</title>
+  <html>
+    <head>
+	    <title>Omund</title>
 
-      <link rel='stylesheet' href='style.css'/>
-      <link rel="shortcut icon" href="MyLogo.ico"/>
-      <script src='script.js'></script>
-    <style></style>
-    </head>
-    <body onload="start()">
-
-
-
-<!-- ____________________________________________________________-->
-
-<div id="form_div" class="form_div" name="form_div"></div>
-<form class="contact_form" id="contact_form">
-<h3 id="formT" class="formT" name="formT">Enter</h3><br/>
-    <input id="text" class="text" name="text" placeholder="Enter"></input><br/><br/>
-<button id="submitB" class="submitB" onclick="start()">Enter</button>
-    <p id="current_person" class="current_person"></p><p id="text_monitor" class="text_monitor"></p><br/>
-    <p id="omund_text" class="omund_text">Omund:</p><p id="reply_monitor" class="reply_monitor"></p>
-</form>
-
-<!-- ____________________________________________________________-->
+      <link rel='stylesheet' href='style.css'/>
+      <link rel="shortcut icon" href="MyLogo.ico"/>
+      <script src='script.js'></script>
+	    <style></style>
+    </head>
+    <body onload="start()">
 
 
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+
+	<!-- ____________________________________________________________-->
+
+	<div id="form_div" class="form_div" name="form_div"></div>
+	<div class="contact_form" id="contact_form">
+		<h3 id="formT" class="formT" name="formT">Enter</h3><br/>
+		    <input id="text" class="text" name="text" placeholder="Enter"></input><br/><br/>
+		<button id="submitB" class="submitB" onclick="start()">Enter</button>
+    <p id="current_person" class="current_person"></p><p id="text_monitor" class="text_monitor"></p><br/>
+    <p id="omund_text" class="omund_text">Omund:</p><p id="reply_monitor" class="reply_monitor"></p>
+	</div>
+
+	<!-- ____________________________________________________________-->
 
 
-    </body>
-  </html>
+	    <br/>
+	    <br/>
+	    <br/>
+	    <br/>
+	    <br/>
+	    <br/>
+	    <br/>
+
+
+    </body>
+  </html>
