--- a/Omund/index.html
+++ b/Omund/index.html
@@ -26,6 +26,13 @@
 	<!-- ____________________________________________________________-->
 
 
+  <div class="welcome" id="welcome">
+    <center>
+    <h1 class="welcome_h" id="welcome_h">Things you can say:</h1>
+  </center>
+  </div>
+
+
 	    <br/>
 	    <br/>
 	    <br/>
