--- a/Omund/index.html
+++ b/Omund/index.html
@@ -10,7 +10,15 @@
     </head>
     <body onload="start()">
 
-
+      <div class="welcome" id="welcome">
+        <center>
+        <h1 class="welcome_h" id="welcome_h">Things you can say:</h1><br/><br/>
+        <p class="welcome_p" id="welcome_p">Hi<br/><br/>How are you?<br/><br/>Tell me something<br/><br/>What time is it?</p><br/>
+        <input id="welcome_text" class="text" name="text" placeholder="OK"></input><br/><br/>
+        <button id="submitB" class="submitB" onclick="welcome_button()">Enter</button><br/>
+        <p id="omund_text" class="omund_text">Omund:</p><p id="welcome_monitor" class="welcome_monitor"></p>
+      </center>
+      </div>
 
 	<!-- ____________________________________________________________-->
 
@@ -24,13 +32,6 @@
 	</div>
 
 	<!-- ____________________________________________________________-->
-
-
-  <div class="welcome" id="welcome">
-    <center>
-    <h1 class="welcome_h" id="welcome_h">Things you can say:</h1>
-  </center>
-  </div>
 
 
 	    <br/>
